--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Books/Index">Livros</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
