--- a/Pages/Account/Logout.cshtml
+++ b/Pages/Account/Logout.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model LogoutModel
 @{
-    ViewData["Title"] = "Log out";
+    ViewData["Title"] = "Sair da sessão";
 }
 
 <header>
@@ -15,7 +15,7 @@
         }
         else
         {
-            <p>You have successfully logged out of the application.</p>
+            <p>Você saiu da sessão.</p>
         }
     }
 </header>
