--- a/Pages/Account/ResetPassword.cshtml
+++ b/Pages/Account/ResetPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model EsseEhBom.Pages.Account.ResetPasswordModel
 @{
-    ViewData["Title"] = "Reset password";
+    ViewData["Title"] = "Resetar a senha";
 }
 
 <h1>@ViewData["Title"]</h1>
