--- a/Pages/Account/Register.cshtml
+++ b/Pages/Account/Register.cshtml
@@ -23,6 +23,11 @@
                 <span asp-validation-for="Input.UserName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Input.FirstName"></label>
+                <input asp-for="Input.FirstName" class="form-control" />
+                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.LateName"></label>
                 <input asp-for="Input.LateName" class="form-control" />
                 <span asp-validation-for="Input.LateName" class="text-danger"></span>
