--- a/Pages/Books/Create.cshtml
+++ b/Pages/Books/Create.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Criar</h1>
 
-<h4>Book</h4>
+<h4>Livro</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,19 +34,19 @@
                 <span asp-validation-for="Book.Country" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Book.ReleaseYear" class="control-label"></label>
-                <input asp-for="Book.ReleaseYear" class="form-control" />
-                <span asp-validation-for="Book.ReleaseYear" class="text-danger"></span>
+                <label asp-for="Book.ReleaseRelease" class="control-label"></label>
+                <input asp-for="Book.ReleaseRelease" class="form-control" />
+                <span asp-validation-for="Book.ReleaseRelease" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">Voltar para lista</a>
 </div>
 
 @section Scripts {
