--- a/Pages/Books/Delete.cshtml
+++ b/Pages/Books/Delete.cshtml
@@ -5,11 +5,13 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>
+    Tem certeza que deseja excluir?
+</h3>
 <div>
-    <h4>Book</h4>
+    <h4>Livro</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -37,16 +39,16 @@
             @Html.DisplayFor(model => model.Book.Country)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Book.ReleaseYear)
+            @Html.DisplayNameFor(model => model.Book.ReleaseRelease)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Book.ReleaseYear)
+            @Html.DisplayFor(model => model.Book.ReleaseRelease)
         </dd>
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="Book.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-danger" /> |
+        <a asp-page="./Index">Voltar para lista</a>
     </form>
 </div>
