--- a/Pages/Books/Details.cshtml
+++ b/Pages/Books/Details.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhe</h1>
 
 <div>
-    <h4>Book</h4>
+    <h4>Livro</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -36,14 +36,14 @@
             @Html.DisplayFor(model => model.Book.Country)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Book.ReleaseYear)
+            @Html.DisplayNameFor(model => model.Book.ReleaseRelease)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Book.ReleaseYear)
+            @Html.DisplayFor(model => model.Book.ReleaseRelease)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Book.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Book.Id">Editar</a> |
+    <a asp-page="./Index">Voltar para lista</a>
 </div>
