--- a/Pages/Books/Index.cshtml
+++ b/Pages/Books/Index.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Livros</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Adicionar um novo livro no catálogo</a>
 </p>
 <table class="table">
     <thead>
@@ -26,7 +26,7 @@
                 @Html.DisplayNameFor(model => model.Book[0].Country)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Book[0].ReleaseYear)
+                @Html.DisplayNameFor(model => model.Book[0].ReleaseRelease)
             </th>
             <th></th>
         </tr>
@@ -47,12 +47,12 @@
                 @Html.DisplayFor(modelItem => item.Country)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ReleaseYear)
+                @Html.DisplayFor(modelItem => item.ReleaseRelease)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-page="./Details" asp-route-id="@item.Id">Detalhes</a> |
+                <a asp-page="./Delete" asp-route-id="@item.Id">Deletar</a>
             </td>
         </tr>
 }
