--- a/Pages/Movies/Delete.cshtml
+++ b/Pages/Movies/Delete.cshtml
@@ -5,11 +5,13 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>
+    Tem certeza que deseja excluir?
+</h3>
 <div>
-    <h4>Movie</h4>
+    <h4>Filme</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -19,22 +21,28 @@
             @Html.DisplayFor(model => model.Movie.Title)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Movie.Director)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Movie.Director)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Movie.Country)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Movie.Country)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Movie.Year)
+            @Html.DisplayNameFor(model => model.Movie.Release)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Movie.Year)
+            @Html.DisplayFor(model => model.Movie.Release)
         </dd>
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="Movie.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-danger" /> |
+        <a asp-page="./Index">Voltar para lista</a>
     </form>
 </div>
