--- a/Pages/Movies/Details.cshtml
+++ b/Pages/Movies/Details.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhe</h1>
 
 <div>
-    <h4>Movie</h4>
+    <h4>Filme</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -18,20 +18,26 @@
             @Html.DisplayFor(model => model.Movie.Title)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Movie.Director)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Movie.Director)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Movie.Country)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Movie.Country)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Movie.Year)
+            @Html.DisplayNameFor(model => model.Movie.Release)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Movie.Year)
+            @Html.DisplayFor(model => model.Movie.Release)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Movie.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Movie.Id">Editar</a> |
+    <a asp-page="./Index">Voltar para lista</a>
 </div>
