--- a/Pages/Movies/Edit.cshtml
+++ b/Pages/Movies/Edit.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
-<h4>Movie</h4>
+<h4>Filme</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -20,24 +20,29 @@
                 <span asp-validation-for="Movie.Title" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Movie.Director" class="control-label"></label>
+                <input asp-for="Movie.Director" class="form-control" />
+                <span asp-validation-for="Movie.Director" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Movie.Country" class="control-label"></label>
                 <input asp-for="Movie.Country" class="form-control" />
                 <span asp-validation-for="Movie.Country" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Movie.Year" class="control-label"></label>
-                <input asp-for="Movie.Year" class="form-control" />
-                <span asp-validation-for="Movie.Year" class="text-danger"></span>
+                <label asp-for="Movie.Release" class="control-label"></label>
+                <input asp-for="Movie.Release" asp-format="{0:yyyy-MM-dd}" class="form-control" />
+                <span asp-validation-for="Movie.Release" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">Voltar para lista</a>
 </div>
 
 @section Scripts {
