--- a/Pages/Movies/Index.cshtml
+++ b/Pages/Movies/Index.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Início";
 }
 
-<h1>Index</h1>
+<h1>Filmes</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Adicionar um novo filme no catálogo</a>
 </p>
 <table class="table">
     <thead>
@@ -17,10 +17,13 @@
                 @Html.DisplayNameFor(model => model.Movie[0].Title)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Movie[0].Director)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Movie[0].Country)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Movie[0].Year)
+                @Html.DisplayNameFor(model => model.Movie[0].Release)
             </th>
             <th></th>
         </tr>
@@ -28,22 +31,25 @@
     <tbody>
         @foreach (var item in Model.Movie)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Country)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Year)
-                </td>
-                <td>
-                    <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Director)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Country)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Release)
+            </td>
+            <td>
+                <a asp-page="./Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-page="./Details" asp-route-id="@item.Id">Detalhe</a> |
+                <a asp-page="./Delete" asp-route-id="@item.Id">Deletar</a>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
