--- a/Pages/Series/Delete.cshtml
+++ b/Pages/Series/Delete.cshtml
@@ -5,9 +5,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>
+    Tem certeza que deseja excluir?
+</h3>
 <div>
     <h4>Serie</h4>
     <hr />
@@ -31,16 +33,22 @@
             @Html.DisplayFor(model => model.Serie.Country)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Serie.Year)
+            @Html.DisplayNameFor(model => model.Serie.Release)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Serie.Year)
+            @Html.DisplayFor(model => model.Serie.Release)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Serie.SeasonNumber)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Serie.SeasonNumber)
         </dd>
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="Serie.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-danger" /> |
+        <a asp-page="./Index">Voltar para lista</a>
     </form>
 </div>
