--- a/Pages/Series/Edit.cshtml
+++ b/Pages/Series/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <h1>Edit</h1>
 
-<h4>Serie</h4>
+<h4>Série</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -30,19 +30,24 @@
                 <span asp-validation-for="Serie.Country" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Serie.Year" class="control-label"></label>
-                <input asp-for="Serie.Year" class="form-control" />
-                <span asp-validation-for="Serie.Year" class="text-danger"></span>
+                <label asp-for="Serie.Release" class="control-label"></label>
+                <input asp-for="Serie.Release" asp-format="{0:yyyy-MM-dd}" class="form-control" />
+                <span asp-validation-for="Serie.Release" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="Serie.SeasonNumber" class="control-label"></label>
+                <input asp-for="Serie.SeasonNumber" asp-format="{0:yyyy-MM-dd}" class="form-control" />
+                <span asp-validation-for="Serie.SeasonNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">Voltar para lista</a>
 </div>
 
 @section Scripts {
