--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Esse é Bom</a>
+                <a class="navbar-brand">Esse é Bom</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,16 +19,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Início</a>
+                            <a class="nav-link" asp-area="" asp-page="/Index">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Movies/Index">Filmes</a>
+                            <a class="nav-link" asp-area="" asp-page="/Movies/Index">Filmes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Series/Index">Séries</a>
+                            <a class="nav-link" asp-area="" asp-page="/Series/Index">Séries</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Books/Index">Livros</a>
+                            <a class="nav-link" asp-area="" asp-page="/Books/Index">Livros</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -42,9 +42,10 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+
+    <footer class="border-top footer  text-muted">
         <div class="container">
-            &copy; 2021 - Esse é Bom - <a asp-area="" asp-page="/index">Privacy</a>
+            &copy; 2021 - Esse é Bom
         </div>
     </footer>
 
