--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/Books/Index">Livros</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-page="/PersonalPage/Index">Minha página pessoal</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
