--- a/Pages/PersonalPage/Index.cshtml
+++ b/Pages/PersonalPage/Index.cshtml
@@ -1,14 +1,27 @@
 ﻿@page
 @model EsseEhBom.Pages.PersonalPage.IndexModel
 @{
+    ViewData["Title"] = "Minha página pessoal";
 }
 
-<div class="bg-primary text-center py-2 mb-4">
-    <div class="container">
-        <a class="badge badge-pill badge-success text-white">Aceitar</a>
-        <a asp-page="./Visit" asp-route-userName="@Model.Teste">Editar</a> |
+
+<form method="post">
+    <div class="form-outline">
+        <div class="form-group">
+            <h3>Procurar pelo usuário: </h3>
+            <input asp-for="@Model.Search" class="form-control" />
+            <span asp-validation-for="@Model.Search" class="text-danger"></span>
+        </div>
+        @if (@Model.Message != null)
+        {
+            <p class="text-danger"><strong>O usuário não existe.</strong></p>
+        }
+        <div class="form-group">
+            <input type="submit" value="Buscar" class="btn btn-primary" />
+        </div>
     </div>
-</div>
+</form>
+
 
 <div class="bg-primary text-center py-2 mb-4">
     <div class="container">
@@ -21,7 +34,7 @@
             <div class="card border-0 shadow">
                 <img src="https://freepikpsd.com/media/2019/10/avatar-perfil-png-5.png" class="card-img-top rounded-circle">
                 <div class="card-body text-center">
-                    <div class="card-text text-black-50">Web Developer</div>
+                    <div class="card-text text-black-50">Amigo 1</div>
                 </div>
             </div>
         </div>
@@ -29,7 +42,7 @@
             <div class="card border-0 shadow">
                 <img src="https://freepikpsd.com/media/2019/10/avatar-perfil-png-5.png" class="card-img-top" alt="...">
                 <div class="card-body text-center">
-                    <div class="card-text text-black-50">Web Developer</div>
+                    <div class="card-text text-black-50">Amigo 2</div>
                 </div>
             </div>
         </div>
@@ -37,7 +50,7 @@
             <div class="card border-0 shadow">
                 <img src="https://freepikpsd.com/media/2019/10/avatar-perfil-png-5.png" class="card-img-top" alt="...">
                 <div class="card-body text-center">
-                    <div class="card-text text-black-50">Web Developer</div>
+                    <div class="card-text text-black-50">Amigo 3</div>
                 </div>
             </div>
         </div>
@@ -45,7 +58,7 @@
             <div class="card border-0 shadow">
                 <img src="https://freepikpsd.com/media/2019/10/avatar-perfil-png-5.png" class="card-img-top" alt="...">
                 <div class="card-body text-center">
-                    <div class="card-text text-black-50">Web Developer</div>
+                    <div class="card-text text-black-50">Amigo 4</div>
                 </div>
             </div>
         </div>
@@ -59,26 +72,77 @@
         <h1 class="font-weight-light text-white">Solicitação de amizade</h1>
     </div>
 </div>
-<ul class="list-group">
-    <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-        A list item
-        <div>
-            <a class="badge badge-pill badge-success text-white">Aceitar</a>
-            <a class="badge badge-pill badge-danger text-white">Recusar</a>
-        </div>
-    </li>
-    <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-        A second list item
-        <div>
-            <span class="badge badge-pill badge-primary">Primary</span>
-            <span class="badge badge-pill badge-secondary">Secondary</span>
-        </div>
-    </li>
-    <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-        A third list item
-        <div>
-            <span class="badge badge-pill badge-primary">Primary</span>
-            <span class="badge badge-pill badge-secondary">Secondary</span>
-        </div>
-    </li>
-</ul>
+@if (@Model.InvitationsFriends != null)
+{
+    <ul class="list-group">
+        @foreach (var item in Model.InvitationsFriends)
+        {
+            <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                @item.ApplicationUser.UserName
+                <div>
+                    <a class="badge badge-pill badge-success text-white">Aceitar</a>
+                    <a class="badge badge-pill badge-danger text-white">Recusar</a>
+                </div>
+            </li>
+        }
+    </ul>
+}
+
+<br />
+
+<div class="bg-secondary text-center py-2 mb-4">
+    <div class="container">
+        <h1 class="font-weight-light text-white">Minhas avaliações</h1>
+    </div>
+</div>
+
+@if (Model.ReviewBooks != null && Model.ReviewSeries != null && Model.ReviewMovies != null)
+{
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                Título
+            </th>
+            <th>
+                Seu comentário:
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.ReviewBooks)
+        {
+            <tr>
+                <td>
+                    <strong>Livro: </strong>@item.Book.Title
+                </td>
+                <td>
+                    @item.Text
+                </td>
+            </tr>
+        }
+        @foreach (var item in Model.ReviewSeries)
+        {
+            <tr>
+                <td>
+                    <strong>Série: </strong>@item.Serie.Title
+                </td>
+                <td>
+                    @item.Text
+                </td>
+            </tr>
+        }
+        @foreach (var item in Model.ReviewMovies)
+        {
+            <tr>
+                <td>
+                    <strong>Filme: </strong>@item.Movie.Title
+                </td>
+                <td>
+                    @item.Text
+                </td>
+            </tr>
+        }
+    </tbody>
+    </table>
+}
