--- a/Pages/Account/Login.cshtml
+++ b/Pages/Account/Login.cshtml
@@ -39,12 +39,14 @@
                         <a id="forgot-password" asp-page="./ForgotPassword">Esqueceu a sua senha?</a>
                     </p>
                     @*<p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Criar a conta</a>
-                    </p>*@
+                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Criar a conta</a>
+                        </p>*@
                 </div>
             </form>
         </section>
     </div>
+    <div class="clearfix visible-xs"></div>
+    <div class="col-xs-6 col-sm-7"> <img src="~/img/ESSEEHBOM.png" width="500" height="510"> </div>
 </div>
 
 @section Scripts {
