--- a/Pages/Account/Register.cshtml
+++ b/Pages/Account/Register.cshtml
@@ -60,6 +60,8 @@
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
+    <div class="clearfix visible-xs"></div>
+    <div class="col-xs-6 col-sm-7" > <img src="~/img/ESSEEHBOM.png" width="800" height="910"> </div>
 </div>
 
 @section Scripts {
