--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -3,3 +3,17 @@
 @{
     ViewData["Title"] = "Página inicial";
 }
+
+<section class="jumbotron text-center">
+    <div class="container">
+        <h1 class="jumbotron-heading">Esse é bom!</h1>
+        <p class="lead text-muted">
+            Olá, nós somos um site novinho para público apaixonado pelo filmes, séries ou livros. Oferecemos as fichas técnicas dos títulos e você pode fazer suas próprias avaliaçãos que serão lidas pelo outros usuários!
+            Acreditamos que a melhor crítica é a crítica elaborada pelo público!
+        </p>
+        <p>
+            <a class="btn btn-primary my-2" asp-area="" asp-page="/Account/Register">Registrar</a>
+            <a class="btn btn-secondary my-2" asp-area="" asp-page="/Account/Login">Login</a>
+        </p>
+    </div>
+</section>
