--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,10 +6,10 @@
 
 <section class="jumbotron text-center">
     <div class="container">
-        <h1 class="jumbotron-heading">Esse é bom!</h1>
+        <h1 class="jumbotron-heading">ESSE EH BOM</h1>
         <p class="lead text-muted">
-            Olá, nós somos um site novinho para público apaixonado pelo filmes, séries ou livros. Oferecemos as fichas técnicas dos títulos e você pode fazer suas próprias avaliaçãos que serão lidas pelo outros usuários!
-            Acreditamos que a melhor crítica é a crítica elaborada pelo público!
+            Seja bem-vindo! Aqui se encontra um inovador e desenvolvido site de indicações de filmes, séries e livros.
+            Você poderá realizar suas próprias avaliações e compartilha-las com todos os outros usuários. Acreditamos que a melhor crítica é elaborada por você. E ai? Qual você avaliará hoje?
         </p>
         <p>
             <a class="btn btn-primary my-2" asp-area="" asp-page="/Account/Register">Registrar</a>
